Fix alignment of lists on mobile

--- a/media/pgus/css/main.css
+++ b/media/pgus/css/main.css
@@ -294,7 +294,7 @@ section.wrapper.style4 {
 
 	section.wrapper,
 	article.wrapper {
-		text-align: center;
+		text-align: left;
 	}
 
 	section.wrapper article,
